--- a/src/assets/scss/apc-selector.scss
+++ b/src/assets/scss/apc-selector.scss
@@ -1,7 +1,7 @@
 ﻿
 @import "variable";
 
-.apc-selector.dingtax .list .H .txt:before{content:"关联丁税宝虚拟组织"}
+.apc-selector.yunya .list .H .txt:before{content:"关联丁税宝虚拟组织"}
 .apc-selector.org .list .H .txt:before{content:"选择"}
 .apc-selector.course .list .H .txt:before{content:"选择课程"}
 .apc-selector.file .list .H .txt:before{content:"选择文档"}
