--- a/src/assets/scss/app/m-app.scss
+++ b/src/assets/scss/app/m-app.scss
@@ -637,7 +637,7 @@
 .M.topic .C.list.feed .label .txt{text-align:left;line-height:1.5;}
 .M.topic .C.list.feed .label .txt:after{display:block;font-size:rem(10);color:#999;letter-spacing:rem(2);}
 .M.topic .C.list .banner{position:relative;display:flex;align-items:center;width:100%;height:rem(100);background:#DDD;background-repeat:no-repeat;background-size:cover;}
-// .M.topic .C.list .banner{position:relative;display:flex;align-items:center;width:rem(280);height:rem(97);margin:0 auto rem(20);padding-left:rem(20);border:solid #EEE;border-width:0;border-radius:rem(5);background:url('https://edu.dingtax.cn/static/image/virus1.jpg');background-size:cover;}
+// .M.topic .C.list .banner{position:relative;display:flex;align-items:center;width:rem(280);height:rem(97);margin:0 auto rem(20);padding-left:rem(20);border:solid #EEE;border-width:0;border-radius:rem(5);background:url('https://edu.yunya.cn/static/image/virus1.jpg');background-size:cover;}
 .M.topic .C.list .banner .icon{position:absolute;top:rem(48);right:rem(20);width:rem(22);height:rem(22);padding:rem(5);fill:#033558;transform:rotate(90deg);border-radius:rem(100);background:rgba(255,255,255,1);}
 .M.topic .C.list .banner .txt{margin-left:rem(20);line-height:1.5;color:#FFF;text-shadow:0 0 rem(3) #033558;}
 .M.topic .C.list .banner .txt:before{display:inline-block;padding:rem(2) rem(10);border-radius:rem(50);font-size:rem(10);color:#FFF;background:rgba(255,255,255,.5);}
@@ -652,7 +652,7 @@
 .M.topic .C.list .apc-switch{width:100%;}
 
 .M.topic.virus{background:rgba(#FF7F00,.95) !important;background:-webkit-linear-gradient(top, rgba(#FF7F00,.95), rgba(#FE280E,.75)) !important;}
-.M.topic.virus .P{background:url('https://edu.dingtax.cn/static/image/virus2.jpg') 0 0;background-size:100% auto;background-repeat:no-repeat;}
+.M.topic.virus .P{background:url('https://edu.yunya.cn/static/image/virus2.jpg') 0 0;background-size:100% auto;background-repeat:no-repeat;}
 
 .M.topic.virus .C.list.feed .label .txt:before{content:'疫情防控';}
 .M.topic.virus .C.list.feed .label .txt:after{display:block;content:'防控期间办税政策与提示';}
@@ -812,13 +812,13 @@
 .area_0115000000 .PC .NAV .apc-switch.primary .sw_i.c .txt{color:#000;}
 .area_0115000000 .PC .NAV .apc-switch.primary .sw_s{display:none;}
 .area_0115000000 .PC .NAV .apc-switch.primary .sw16{display:none;}
-.area_0115000000 .PC .A.home .aH{border:0;background:url('https://edu.dingtax.cn/static/image/area_0115000000/banner.jpg') 0 rem(0) no-repeat;background-size:100% auto;}
+.area_0115000000 .PC .A.home .aH{border:0;background:url('https://edu.yunya.cn/static/image/area_0115000000/banner.jpg') 0 rem(0) no-repeat;background-size:100% auto;}
 .area_0115000000 .PC .A .aH .mHead{width:50%;}
-.area_0115000000 .PC .A .aH .mArea .pic.logo{width:rem(252);height:rem(24);border-radius:0;background-image:url('https://edu.dingtax.cn/static/image/nmg_logo.png') !important;background-size:cover;background-position:0 rem(-26);}
+.area_0115000000 .PC .A .aH .mArea .pic.logo{width:rem(252);height:rem(24);border-radius:0;background-image:url('https://edu.yunya.cn/static/image/nmg_logo.png') !important;background-size:cover;background-position:0 rem(-26);}
 .area_0115000000 .PC .A.home .aH .mArea .name{top:rem(50);left:50%;font-size:rem(9);padding:rem(3) rem(10);text-shadow:0 0 0;font-weight:400;border-radius:rem(50);background:rgba($color_one,1.75);transform:translate(-50%,0);}
 .area_0115000000 .PC .A.home .aH{height:rem(280);}
 // .area_0115000000 .PC .A.home .aH .account{transform:scale(1) translate(rem(-680), rem(224));}
-.area_0115000000 .PC .A.home .aH .mArea .pic.logo{top:rem(-10);left:0;width:100%;height:rem(60);border-radius:0;background-image:url('https://edu.dingtax.cn/static/image/nmg_logo.png') !important;background-size:auto 100%;background-position:center;transform:scale(.75);}
+.area_0115000000 .PC .A.home .aH .mArea .pic.logo{top:rem(-10);left:0;width:100%;height:rem(60);border-radius:0;background-image:url('https://edu.yunya.cn/static/image/nmg_logo.png') !important;background-size:auto 100%;background-position:center;transform:scale(.75);}
 .area_0115000000 .PC .A.home .U{padding-top:rem(280);background:rgba(#F5F5F5,.95) content-box;}
 // .area_0115000000 .PC .A .U .L{border-top:rem(1) solid #FFF;background:rgba(#F5F5F5,.95);}
 // .area_0115000000 .PC .A .second .U{display:block;padding:0;}
@@ -830,7 +830,7 @@
 // .area_0115000000 .PC .A{background:url('/static/nmg3.jpg') 0 rem(0) no-repeat;background-size:100% auto;}
 .area_0115000000 .PC .A.area .P.home .L{width:rem(1240);}
 .area_0115000000 .PC .A.area .P.home .flex{width:rem(940);border:0;}
-.area_0115000000 .PC .A.area .P.home .mPanel.toutiao{width:rem(940);border:0;background:url('https://edu.dingtax.cn/static/image/area_0115000000/bg1.png');background-size:cover;}
+.area_0115000000 .PC .A.area .P.home .mPanel.toutiao{width:rem(940);border:0;background:url('https://edu.yunya.cn/static/image/area_0115000000/bg1.png');background-size:cover;}
 // .area_0115000000 .PC .A.area .P.home .func.flex:after{content:"最新动态";position:absolute;z-index:1;bottom:rem(-14);left:0;padding:0 rem(10);color:#000;text-shadow:1px 1px 0 #FFF;font-size:rem(12);font-weight:700;background:#F5F5F5;}
 .area_0115000000 .PC .A.area .P.home .mPanel.calendar{top:rem(0);width:rem(280);height:rem(280);border:0;}
 .area_0115000000 .PC .A.area .P.home .mPanel.calendar .apc-calendar{padding-top:rem(50);}
@@ -880,7 +880,7 @@
 .area_0115000000 .PC .P.home .flex .signups .title:before{content:"培训报名";}
 .area_0115000000 .PC .P.home .flex .files .title:before{content:"培训资料";}
 .area_0115000000 .PC .P.home .flex .worldTax .title:before{content:"国际税收";}
-.area_0115000000 .PC .P.home .flex .worldTax .icon{background:url("https://oss-edu-prod.dingtax.cn/doc/id2TTYFmRz2pXaTWzKUQWtDi.png");background-size:cover;}
+.area_0115000000 .PC .P.home .flex .worldTax .icon{background:url("https://oss-edu-prod.yunya.cn/doc/id2TTYFmRz2pXaTWzKUQWtDi.png");background-size:cover;}
 .area_0115000000 .M.category.view.worldTax .U{padding:0;}
 
 .area_0115000000 .PC .A .aH .mHead .mo .link.parent:before{content:"返回自治区学堂";}
@@ -922,8 +922,8 @@
 
 
 .P.second .C.category .banner{height: rem(80);background-size: cover;}
-.P.second .C.category .banner.video{background-image: url('https://oss-edu-prod.dingtax.cn/cover/idQHPhAcTeiFeV6G3ZZcAozf.png');}
-.P.second .C.category .banner.file{background-image: url('https://oss-edu-prod.dingtax.cn/cover/idKbC2sf93yxcbbhfmYsGyAi.png');}
+.P.second .C.category .banner.video{background-image: url('https://oss-edu-prod.yunya.cn/cover/idQHPhAcTeiFeV6G3ZZcAozf.png');}
+.P.second .C.category .banner.file{background-image: url('https://oss-edu-prod.yunya.cn/cover/idKbC2sf93yxcbbhfmYsGyAi.png');}
 
 // .P.second .C.category .mlist{padding:rem(10) !important;}
 .P.second .mType{clear:left;width:100%;@extend %clearfloat;}
@@ -949,7 +949,7 @@
 // .org_idMfRKLBesgR83NpyYoSQ5C .P.home .flex .files .title:before, .org_idMfRKLBesgR83NpyYoSQ5C.A .aN .files .txt:before, .org_idMfRKLBesgR83NpyYoSQ5C .P.second.files .pH .txt:after{content:"课件"}
 // .org_idMfRKLBesgR83NpyYoSQ5C .P.home .flex .articles .title:before, .org_idMfRKLBesgR83NpyYoSQ5C.A .aN .articles .txt:before, .org_idMfRKLBesgR83NpyYoSQ5C .P.second.articles .pH .txt:after{content:"资讯"}
 // .org_idMfRKLBesgR83NpyYoSQ5C .P.home .flex .ask .title:before, .org_idMfRKLBesgR83NpyYoSQ5C.A .aN .ask .txt:before, .org_idMfRKLBesgR83NpyYoSQ5C .P.second.ask .pH .txt:after{content:"咨询"}
-// .org_idMfRKLBesgR83NpyYoSQ5C.A.org.home .aH{background-image: url('https://oss-edu-prod.dingtax.cn/cover/idWn4wNM4FciAkTMykdntyad.jpg') !important;background-size: cover !important;}
+// .org_idMfRKLBesgR83NpyYoSQ5C.A.org.home .aH{background-image: url('https://oss-edu-prod.yunya.cn/cover/idWn4wNM4FciAkTMykdntyad.jpg') !important;background-size: cover !important;}
 // .org_idMfRKLBesgR83NpyYoSQ5C .P.second .C.category .banner{display: none;}
 
 // 上海黄浦区
@@ -957,12 +957,12 @@
 .org_idSEZhnudYdyss5J7nN8i5vv .P.home .flex .files .title:before, .org_idSEZhnudYdyss5J7nN8i5vv.A .aN .files .txt:before, .org_idSEZhnudYdyss5J7nN8i5vv .P.second.files .pH .txt:after{content:"课件"}
 .org_idSEZhnudYdyss5J7nN8i5vv .P.home .flex .articles .title:before, .org_idSEZhnudYdyss5J7nN8i5vv.A .aN .articles .txt:before, .org_idSEZhnudYdyss5J7nN8i5vv .P.second.articles .pH .txt:after{content:"资讯"}
 .org_idSEZhnudYdyss5J7nN8i5vv .P.home .flex .ask .title:before, .org_idSEZhnudYdyss5J7nN8i5vv.A .aN .ask .txt:before, .org_idSEZhnudYdyss5J7nN8i5vv .P.second.ask .pH .txt:after{content:"咨询"}
-.org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background-image: url('https://oss-edu-prod.dingtax.cn/cover/idVQkuMg9PqBvMFkffJV5vHX.png') !important;background-size: cover !important;}
+.org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background-image: url('https://oss-edu-prod.yunya.cn/cover/idVQkuMg9PqBvMFkffJV5vHX.png') !important;background-size: cover !important;}
 .org_idSEZhnudYdyss5J7nN8i5vv .P.second .C.category .banner{display: none;}
 
 
 //黄埔
-.PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background:url('https://oss-edu-prod.dingtax.cn/cover/idB9G2iw3gd3YpitUYYUnki8.jpg') no-repeat !important}
+.PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background:url('https://oss-edu-prod.yunya.cn/cover/idB9G2iw3gd3YpitUYYUnki8.jpg') no-repeat !important}
 .PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .mHead{left:rem(40);}
 .PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .mHead.mOrg .status{position:absolute;top:rem(-20);left:rem(-10)}
 
@@ -1032,7 +1032,7 @@
 
   .P.home .mPanel.toutiao{height:rem(150);border-bottom:rem(10) solid #EEE;}
   .P.home .mPanel.toutiao .mData .name{margin:0;padding:0 rem(20);font-size:rem(16);line-height:2;color:$color_red;text-align:center;}
-  .area_0133000000 .P.home .mPanel.toutiao{background:url('https://edu.dingtax.cn/static/image/toutiaobg.jpg');background-size:100%;}
+  .area_0133000000 .P.home .mPanel.toutiao{background:url('https://edu.yunya.cn/static/image/toutiaobg.jpg');background-size:100%;}
 
   .P.home .mPanel.topic{width:100%;background:#EEE;}
   .P.home .mPanel.topic .mTopic{position:relative;width:calc(100% - 1.25rem) !important;height:rem(100);margin:0 rem(10) rem(10);padding:rem(10);border:0;text-align:left;border-radius:rem(5);box-shadow:0 0 rem(10) #CCC;}
@@ -1330,8 +1330,8 @@
   .A.people .P.second .pN .purchase:before{content:"购买记录";}
   .A.people .P.second .pN .sw_s{display:none;}
 
-  .area_0115000000 .A.home .aH{background:url('https://edu.dingtax.cn/static/image/area_0115000000/m_banner.jpg') !important;background-size:cover !important;}
-  .area_0115000000 .A.home .aH .mHead .pic{width:rem(70);height:rem(70);background-image:url('https://edu.dingtax.cn/static/image/area_0115000000/logo.png') !important;background-size:cover;background-color:transparent;}
+  .area_0115000000 .A.home .aH{background:url('https://edu.yunya.cn/static/image/area_0115000000/m_banner.jpg') !important;background-size:cover !important;}
+  .area_0115000000 .A.home .aH .mHead .pic{width:rem(70);height:rem(70);background-image:url('https://edu.yunya.cn/static/image/area_0115000000/logo.png') !important;background-size:cover;background-color:transparent;}
   .area_0115000000 .A .aH .mHead .mo .link{color:rgba(#FFF,.75);border-color:rgba(#FFF,.5);}
   .area_0115000000 .P.home .flex,
   .area_0115000000 .P.home .mPanel.toutiao:after
@@ -1339,7 +1339,7 @@
 
   .area_0115000000 .P.home .mPanel.toutiao:after{content:"";position:absolute;bottom:0;left:0;width:100%;height:rem(20);}
 
-  .area_0115000000 .P.home .mPanel.toutiao{height:rem(100);background:url('https://edu.dingtax.cn/static/image/area_0115000000/m_bg1.png') right bottom no-repeat;background-size:50% auto;}
+  .area_0115000000 .P.home .mPanel.toutiao{height:rem(100);background:url('https://edu.yunya.cn/static/image/area_0115000000/m_bg1.png') right bottom no-repeat;background-size:50% auto;}
   .area_0115000000 .P.home .mPanel.toutiao .mData{padding:rem(15);border:0;}
   .area_0115000000 .P.home .mPanel.toutiao .mData .name{position:relative;top:rem(-5);padding:0 rem(100) 0 0;font-weight:700;color:#000;line-height:1.5;text-align:left;}
   .C .mlist .label{display:none;}
@@ -1355,7 +1355,7 @@
   .org_idUfCoBqPHwynCp6M3sbxS9F .aN .sw_i.files .txt:before{content:"课件"}
   .org_idUfCoBqPHwynCp6M3sbxS9F .P.home .flex .videos .title:before{content:"视频"}
   .org_idUfCoBqPHwynCp6M3sbxS9F .P.home .flex .files .title:before{content:"课件"}
-  .org_idUfCoBqPHwynCp6M3sbxS9F.A.org .aH{background-image: url('https://oss-edu-prod.dingtax.cn/cover/idBaYesU4SYXnTjTBjjMAX1g.jpg') !important;background-size: cover !important;}
+  .org_idUfCoBqPHwynCp6M3sbxS9F.A.org .aH{background-image: url('https://oss-edu-prod.yunya.cn/cover/idBaYesU4SYXnTjTBjjMAX1g.jpg') !important;background-size: cover !important;}
   .org_idUfCoBqPHwynCp6M3sbxS9F.A.home .aH .mHead .name:after{content:"上海市第三税务分局纳税人学堂";display:block!important;margin-top:.5rem;font-size:.75rem;color:rgba(255,255,255,.75);}
 
 }
