--- a/src/assets/scss/app/m-category.scss
+++ b/src/assets/scss/app/m-category.scss
@@ -7,8 +7,8 @@
 .M.category .H>.txt:before{content:"为"}
 .M.category .H>.txt:after{content:"设置标签"}
 // .M.category.edit .H>.txt:before{content:"编辑分类"}
-.M.category.dingtax.view .H>.txt:before{content:""}
-.M.category.dingtax.view .H>.txt:after{content:"丁税宝企业标签"}
+.M.category.yunya.view .H>.txt:before{content:""}
+.M.category.yunya.view .H>.txt:after{content:"丁税宝企业标签"}
 
 // .M.category .B{height:rem(400)}
 
