--- a/src/assets/scss/app/m-content.scss
+++ b/src/assets/scss/app/m-content.scss
@@ -504,7 +504,7 @@
 
 
 /*黄埔*/
-.PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background:url('https://oss-edu-prod.dingtax.cn/cover/idB9G2iw3gd3YpitUYYUnki8.jpg') no-repeat !important}
+.PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .aH{background:url('https://oss-edu-prod.yunya.cn/cover/idB9G2iw3gd3YpitUYYUnki8.jpg') no-repeat !important}
 .PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org .aH .account{display:none;}
 .PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .mHead{left:2.5rem;}
 .PC .org_idSEZhnudYdyss5J7nN8i5vv.A.org.home .mHead.mOrg .status{position:absolute;top:-1.25rem;left:-0.625rem;}
@@ -617,8 +617,8 @@
 
   .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.author{float:left;width:rem(190);}
   .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.exlink{float:left;display:flex;position:relative;width:rem(80);height:rem(36);border-radius:rem(5);justify-content:center;align-items:center;background:#FFF;}
-  .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.exlink .dingtax{display:block;}
-  .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.exlink .dingtax:before{content:"平台主页";color:$color_one;}
+  .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.exlink .yunya{display:block;}
+  .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.exlink .yunya:before{content:"平台主页";color:$color_one;}
   .org_idA3K17bYwCL7Di2RaA47LzC .P.consumer.content .oplist .mContent.extend.free>.author .txt{width:rem(140);}
 
   .A.org_id4VwbS19yAB8msYybVPPkkR .P.consumer.content .oplist .mContent.extend > .author .to{display:none;}
@@ -715,7 +715,7 @@
 
   .v-idXVscv5CzZAAEt5ZaxVJqyo .P .L>.poster,
   .v-idRkrmhrjqsVFMQgzEA47T47 .P .L>.poster
-  {display:block;overflow:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:0;background:url('https://edu.dingtax.cn/lADPD3W5LsMFR5nNBOzNA8A_960_1260.jpg') top center $color_one;background-size:cover;transition:all .4s;}
+  {display:block;overflow:hidden;opacity:0;position:absolute;top:0;left:0;width:100%;height:0;background:url('https://edu.yunya.cn/lADPD3W5LsMFR5nNBOzNA8A_960_1260.jpg') top center $color_one;background-size:cover;transition:all .4s;}
   .v-idXVscv5CzZAAEt5ZaxVJqyo .P.CD .L>.poster,
   .v-idRkrmhrjqsVFMQgzEA47T47 .P.CD .L>.poster
   {display:block;opacity:1;height:rem(420);}
