--- a/src/assets/scss/m-category.scss
+++ b/src/assets/scss/m-category.scss
@@ -3,8 +3,8 @@
 
 .M.category.view .H>.txt:before{content:"选择分类"}
 .M.category.edit .H>.txt:before{content:"编辑分类"}
-.M.category.dingtax.view .H>.txt:before{content:""}
-.M.category.dingtax.view .H>.txt:after{content:"征纳沟通平台企业公共标签"}
+.M.category.yunya.view .H>.txt:before{content:""}
+.M.category.yunya.view .H>.txt:after{content:"征纳沟通平台企业公共标签"}
 
 .M.category .B{height:rem(400)}
 .M.category .L{position:static;}
