--- a/src/assets/scss/m-profile.scss
+++ b/src/assets/scss/m-profile.scss
@@ -97,8 +97,8 @@
 .C.edit .basic>.item.orgPhone .txt:before{content:"填写电话"}
 .C.edit .basic>.item.orgAddr:before{content:"地址"}
 .C.edit .basic>.item.orgAddr .txt:before{content:"填写地址"}
-.C.edit .basic>.item.orgDingtax:before{content:"丁税宝"}
-.C.edit .basic>.item.orgDingtax .txt:before{content:"绑定丁税宝"}
+.C.edit .basic>.item.orgyunya:before{content:"丁税宝"}
+.C.edit .basic>.item.orgyunya .txt:before{content:"绑定丁税宝"}
 .C.edit .basic>.item.orgAdmin:before{content:"管理员"}
 .C.edit .basic>.item.orgAdmin .txt:before{content:"选择管理员"}
 .C.edit .basic>.item.snsbind:before{content:"绑定"}
