--- a/src/assets/scss/apc-ui.scss
+++ b/src/assets/scss/apc-ui.scss
@@ -113,7 +113,7 @@ a.x u:after,a.x1 u:after,a.x2 u:after{
 .demo .panel .preview>label{display:block;margin:rem(60) 0 rem(50);font-size:rem(16);}
 
 @import "apc-textarea";
-@import "apc-player";
+// @import "apc-player";
 @import "apc-calendar";
 @import "apc-selector";
 @import "apc-map";
